# esp32-quake

./: .gitignore  README.md  sdkconfig.defaults
components/: notes.txt
components/bsp_esp32_p4_function_ev_board_noglib/: .component_hash  README.md  esp32_p4_function_ev_board.c  idf_component.yml
components/hid_ev/: hid_ev.c
components/quakegeneric/: CMakeLists.txt
components/quakegeneric/quakegeneric/source/: cd_null.c  cl_main.c  common.c  console.c  d_iface.h  d_modech.c  d_scan.c  draw.c  host.c  keys.c  model.c  net.h  net_dgrm.c  net_main.c  net_udp.c  pr_exec.c  quakedef.h  quakegeneric.c  quakegeneric.h  r_draw.c  r_main.c  r_sky.c  snd_dma.c  snd_mix.c  sv_main.c  sys_null.c  vid_null.c
main/: CMakeLists.txt  audio.c  cd_cue.c  display.c  display.h  eth_connect.c  eth_connect.h  font_8x16.h  idf_component.yml  input.c  input.h  main.c  usb_hid.c  usb_hid.h
